gitops/kustomize/pretext/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pretext
  annotations:
    argocd.argoproj.io/sync-wave: "0"
